--- a/finalproject/victoriamap.html
+++ b/finalproject/victoriamap.html
@@ -53,6 +53,11 @@
         color: blue;
     }
 
+    #data p {
+        font-family: "Verdana", "Arial", sans-serif;
+        color: blue;
+    }
+
     #legend p {
         font-family: "Verdana", "Arial", sans-serif;
         color: white;
